Bug 478030 - Open as root missing from context menu dispite it showing in the confugure window.
Summary: Open as root missing from context menu dispite it showing in the confugure wi...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.01.80
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-12-04 05:43 UTC by Alexander
Modified: 2024-08-30 17:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander 2023-12-04 05:43:36 UTC
SUMMARY
***

STEPS TO REPRODUCE
1. Go to settings -> configure dolphin -> context menu -> Download new services
2. Install Open as Root 
3. Reboot still does not show it in the right click menu in dolphin

OBSERVED RESULT
Missing from context menu

EXPECTED RESULT
Open as root being available in Dolphin

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Neon Unstable
(available in About System)
KDE Plasma Version: 5.9
KDE Frameworks Version: 5.246
Qt Version: 6.6

ADDITIONAL INFORMATION
I can only assume that context menu addons are not available yet for kde 6.0
Comment 1 Nicolas Fella 2023-12-10 19:58:42 UTC
Service menus are available. The problem here is that this particular item uses an outdated metadata format (ServiceTypes= instead of MimeType=)
Comment 2 Bug Janitor Service 2023-12-10 20:20:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1509
Comment 3 Christoph Cullmann 2024-08-30 17:30:00 UTC
Git commit c5ffdf9e48147641704fe8d14b2819fe9ae3c789 by Christoph Cullmann, on behalf of Nicolas Fella.
Committed on 30/08/2024 at 17:14.
Pushed by cullmann into branch 'master'.

Accept service menus that use ServiceTypes to specify their types

While they should use MimeType for this also read the old key for compatibility

M  +7    -2    src/widgets/kfileitemactions.cpp

https://invent.kde.org/frameworks/kio/-/commit/c5ffdf9e48147641704fe8d14b2819fe9ae3c789