Accept service menus that use ServiceTypes to specify their types

While they should use MimeType for this also read the old key for compatibility

BUG: 478030